mantine setup with tailwind, react flow example, tailwind base config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@./source",
+  "name": "@nx-mf/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
@@ -31,6 +31,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tabler/icons-react": "^3.33.0",
+    "@tailwindcss/postcss": "^4.1.7",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
     "@types/jest": "^29.5.12",
@@ -39,7 +40,8 @@
     "@types/react-dom": "19.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^3.0.0",
-    "autoprefixer": "10.4.13",
+    "@xyflow/react": "^12.6.4",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -52,14 +54,14 @@
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
     "nx": "21.0.3",
-    "postcss": "8.4.38",
+    "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.6.2",
     "react-error-boundary": "^6.0.0",
     "react-refresh": "~0.14.0",
     "tailwind-preset-mantine": "^2.1.0",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "^4.1.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
