--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "cart/Module": ["apps/cart/src/remote-entry.ts"],
       "checkout/Module": ["apps/checkout/src/remote-entry.ts"],
+      "flow_editor/Module": ["apps/flow_editor/src/remote-entry.ts"],
       "products/Module": ["apps/products/src/remote-entry.ts"]
     }
   },
