--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,6 @@
     "nrwl.angular-console",
     "esbenp.prettier-vscode",
     "dbaeumer.vscode-eslint",
-    "firsttris.vscode-jest-runner",
-    // "vunguyentuan.vscode-css-variables"
+    "firsttris.vscode-jest-runner"
   ]
 }
