--- a/apps/flow_editor/project.json
+++ b/apps/flow_editor/project.json
@@ -10,6 +10,14 @@
         "port": 4204
       },
       "dependsOn": ["shop:serve"]
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": ["tsc -p tsconfig.app.json --noEmit"],
+        "cwd": "apps/flow_editor",
+        "forwardAllArgs": false
+      }
     }
   }
 }
