--- a/apps/shop/project.json
+++ b/apps/shop/project.json
@@ -9,6 +9,14 @@
       "options": {
         "port": 4200
       }
+    },
+    "typecheck": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": ["tsc -p tsconfig.app.json --noEmit"],
+        "cwd": "apps/shop",
+        "forwardAllArgs": false
+      }
     }
   }
 }
