--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@nx-mf/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "private": true,
   "devDependencies": {
     "@babel/core": "^7.14.5",
@@ -49,10 +51,12 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "lint-staged": "^16.0.0",
     "nx": "21.0.3",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
