--- a/nx.json
+++ b/nx.json
@@ -93,6 +93,27 @@
       ],
       "dependsOn": ["^build"],
       "cache": true
+    },
+    "build": {
+      "cache": true,
+      "dependsOn": ["^build"]
+    },
+    "@nx/webpack:webpack": {
+      "inputs": [
+        "production",
+        "^production",
+        {
+          "env": "NX_MF_DEV_REMOTES"
+        }
+      ],
+      "dependsOn": ["^build"],
+      "cache": true
+    }
+  },
+  "release": {
+    "projects": ["*"],
+    "version": {
+      "currentVersionResolver": "disk"
     }
   }
 }
