--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@nx/rspack": "21.0.3",
     "@nx/vite": "21.0.3",
     "@nx/web": "21.0.3",
+    "@nx/webpack": "21.0.3",
     "@nx/workspace": "21.0.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@rspack/cli": "1.3.8",
     "@rspack/core": "1.3.8",
     "@rspack/dev-server": "1.1.1",
     "@rspack/plugin-react-refresh": "^1.0.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
